--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <option value="kkcz">KKCZ</option>
             <option value="osocze">Osocze</option>
             <option value="kpk">KPK</option>
+            <option value="kozuszek">Kożuszek leuk. pł.</option>
         </select>
         <p style="font-size: 13px; color: #666; margin-top: 8px;">
             Wynik podawany w mililitrach (ml)
@@ -39,13 +40,13 @@ KPK                462–564 ml
 
 KKCZ bklp/RW       250–350 ml
 KKCZ/RW            320–420 ml
-UKKCZ/RW           220–300 ml
-
+UKKCZ/RW           220–320 ml
+                
+FFP                200–320 ml
 FFP KRIO           250–320 ml
-FFP                250–320 ml
 FFP „Foki”         150–320 ml
 FFP inakt.         ≥190 ml
-FFP lecz.          250–320 ml
+FFP lecz.          200–320 ml
 Osocze >24h        150–320 ml
 
 FFP 400            360–440 ml
@@ -55,7 +56,7 @@ FFP 800            720–880 ml
 
 FFP-Af do frakcj.  >200 ml
 
-Zł. KKP            >200 ml
+Zl. KKP            >200 ml
 KKP i KKP/RW       220–320 ml
 
 KG                 <500 ml
